deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: purple-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: lucifer-container
        image: hazemsobhy/lucifer-web:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
            cpu: "500m"
